--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap');
-@import url('/css/menu.css');
+@import url('about-me.css');
 
 *{
     margin: 0;
@@ -18,10 +18,6 @@ html{
 
 a{
     text-decoration: none;
-}
-
-:root{
-
 }
 
 .header{
@@ -175,6 +171,7 @@ a{
 
     .fernando-image{
         height: 190px;
+        width: 190px;
     }
 }
 
