--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -131,6 +131,7 @@ a{
 @media (max-width: 525px){
     .toggle-button{
         display: flex;
+        z-index: 1000;
     }
 
     .navbar-links{
@@ -138,9 +139,8 @@ a{
         width: 100%;
         height: 100vh;
         position: absolute;
-        background-color: #000000ce;
+        background-color: #000000;
         top: 0;
-        margin-top: 45px;
         padding: auto auto;
         z-index: 100;
         align-items: center;
@@ -163,8 +163,8 @@ a{
 
     .navbar-links li{
         text-align: center;
-        padding: 5px;
-        font-size: 3em;
+        padding: 20px 0px;
+        font-size: 2.5em;
     }
 
     .navbar-links.active{
