--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -95,6 +95,7 @@ a{
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
+    cursor: pointer;
 }
 
 /* Intento de menu responsive */
@@ -164,7 +165,7 @@ a{
     .navbar-links li{
         text-align: center;
         padding: 20px 0px;
-        font-size: 2.5em;
+        font-size: 1.8em;
     }
 
     .navbar-links.active{
