--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -27,6 +27,9 @@ a{
 
 .header{
     border-bottom: 1px solid #2525256e;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
 }
 
 .container{
@@ -57,6 +60,7 @@ a{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    
 }
 
 .nav-link{
@@ -130,6 +134,10 @@ a{
 }
 
 @media (max-width: 525px){
+    .header{
+        border: none;
+    }
+
     .toggle-button{
         display: flex;
         z-index: 1000;
@@ -183,7 +191,7 @@ a{
 
 /* Main */
 .banner{
-    padding: 3em 0px;
+    padding: 2em 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -238,7 +246,7 @@ a{
 }
 
 .container-profile{
-    padding: 30px;
+    padding: 25px 0;
 }
 
 .picture-border{
