--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -191,7 +191,7 @@ a{
 
 /* Main */
 .banner{
-    padding: 2em 0px;
+    padding: 5em 0px 3em 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
