--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -26,33 +26,17 @@ a{
 }
 
 .header{
-    border-bottom: 1px solid #2525256e;
     position: fixed;
     width: 100%;
     z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.794);
 }
 
 .container{
     margin: 0px 10px;
 }
 
-@media (min-width: 768px) {
-    .container{
-        margin: 0px 50px;
-    }
-}
 
-@media (min-width: 1024px){
-    .container{
-        margin: 0px 150px;
-    }
-}
-
-@media (min-width: 1440px){
-    .container{
-        margin: 0px 350px;
-    }
-}
 
 .nav{
     height: 44px;
@@ -66,7 +50,7 @@ a{
 .nav-link{
     padding: 5px 10px;
     margin-right: 20px;
-    font-size: .95em;
+    font-size: .85em;
     color: #fff;
     opacity: .80;
     font-weight: 500;
@@ -133,65 +117,15 @@ a{
     border-radius: 10px;
 }
 
-@media (max-width: 525px){
-    .header{
-        border: none;
-    }
 
-    .toggle-button{
-        display: flex;
-        z-index: 1000;
-    }
-
-    .navbar-links{
-        display: none;
-        width: 100%;
-        height: 100vh;
-        position: absolute;
-        background-color: #000000;
-        top: 0;
-        padding: auto auto;
-        z-index: 100;
-        align-items: center;
-    }
-
-    .nav{
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .logo{
-        padding: 0px 10px;
-    }
-
-    .navbar-links ul{
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .navbar-links li{
-        text-align: center;
-        padding: 20px 0px;
-        font-size: 1.8em;
-    }
-
-    .navbar-links.active{
-        display: flex;
-    }
-
-    .banner{
-        font-size: .85em;
-    }
-
-    .fernando-image{
-        width: 190px;
-    }
-}
 
 /* Main */
+main{
+    background-color: rgba(37, 37, 37, 0.835);
+}
+
 .banner{
-    padding: 5em 0px 3em 0px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -221,6 +155,7 @@ a{
     background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 4.5em;
+    margin-bottom: 20px;
 }
 
 .subtittle{
@@ -228,6 +163,16 @@ a{
     opacity: .95;
     font-weight: 400;
     color: #fff;
+    letter-spacing: -.025em;
+}
+
+.description-tittle{
+    font-size: 1.1em;
+    opacity: .85;
+    font-weight: 400;
+    color: #fff;
+    letter-spacing: -.025em;
+    line-height: 1.5;
 }
 
 .container-buttom{
@@ -235,14 +180,15 @@ a{
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    padding: 50px 0px;
+    padding: 20px 0px;
 }
 
 .main-buttom{
     color: #6599fb;
     padding: 5px 10px;
     letter-spacing: -.025em;
-    font-size: .97em;
+    font-size: .95em;
+    font-weight: 600;
 }
 
 .container-profile{
@@ -253,7 +199,7 @@ a{
     border-radius: 50%;
     padding: 5px;
     background-image: linear-gradient(
-    91.36deg, #6aa9e498 0%, #cab6e27c 13.02%, #caeaf8 25.52%, #6dc7ee 37.5%, #caeaf8 49.48%, #77c8eb 63.02%, #7aa4f3b4 72.92%, #caeaf8 84.38%, #caeaf8 97.92%);
+        91.36deg, #6aa9e498 0%, #7aa4f3b4 13.02%, #6dc7ee 25.52%, #6dc7ee 37.5%, #caeaf8 49.48%, #77c8eb 63.02%, #7aa4f3b4 72.92%, #90b2f3b4 84.38%, #90b2f3b4 97.92%);
     animation: intro-gradient 10s infinite ease both;
     background-size: 200% 200%;
     max-width: 500px;
@@ -277,7 +223,7 @@ a{
     height: auto;
     max-height: auto;
     border-radius: 50%;
-    max-width: 290px;
+    max-width: 250px;
     opacity: .95;
 }
 
@@ -286,6 +232,7 @@ a{
 .footer{
     border-top: 1px solid #2525256e;
     padding: 50px 0px 5px 0px;
+    background-color: rgba(0, 0, 0, 0.794);
 }
 
 .footer-section-top{
@@ -336,4 +283,215 @@ a{
 .copy-design{
     color: #fff;
     text-decoration: underline;
+}
+
+/*  ABOUT ME  */
+
+/* About, Main */
+
+.background-about-hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 8em 0;
+    color: #fff;
+    text-align: center;
+}
+
+.about-tittle {
+    background-image: linear-gradient(
+    91.36deg, #6aa9e498 0%, #7aa4f3b4 13.02%, #6dc7ee 25.52%, #6dc7ee 37.5%, #caeaf8 49.48%, #77c8eb 63.02%, #7aa4f3b4 72.92%, #90b2f3b4 84.38%, #90b2f3b4 97.92%);
+    animation: intro-gradient 10s infinite ease both;
+    background-size: 200% 200%;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -moz-background-clip: text;
+    -webkit-animation: intro-gradient 10s infinite ease both;
+    -moz-animation: intro-gradient 10s infinite ease both;
+    animation: intro-gradient 10s infinite ease both;
+    line-height: 1.1;
+    letter-spacing: -.045em;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 4.5em;
+}
+
+.about-description {
+    font-size: 1.5em;
+    opacity: .95;
+    font-weight: 600;
+    color: #fff;
+    letter-spacing: -.025em;
+}
+
+/* Grid, section */
+.about-content {
+    padding: 5em 0 0 0;
+}
+
+.grid-style{
+    margin: 1em 0;
+    background-color: #2e2d2d;
+    padding: 2em;
+    border-radius: 1.1em;
+    text-align: left;
+    align-items: center;
+}
+
+.about-grid {
+    display: grid;
+    gap: 1em;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    letter-spacing: -.015em;
+    line-height: 1.3;
+}
+
+.grid-tittle {
+    grid-column: 1 / 55%;
+    grid-row: 1 / 2;
+}
+
+.grid-head{
+    padding: .80em 0 1em 0;
+    font-size: 2em;
+}
+
+.grid-description {
+    font-weight: 600;
+    font-size: 1.2em;
+    opacity: .75;
+}
+
+/* Grid, Tech */
+.grid-tech {
+    grid-column: 2 / 3;
+    background-image: linear-gradient(
+        91.36deg, #6aa9e498 0%, #7aa4f3b4 13.02%, #6dc7ee 25.52%, #6dc7ee 37.5%, #caeaf8 49.48%, #77c8eb 63.02%, #7aa4f3b4 72.92%, #90b2f3b4 84.38%, #90b2f3b4 97.92%);
+    animation: intro-gradient 10s infinite ease both;
+    background-size: 200% 200%;
+}
+
+.tech-icons{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1em;
+}
+
+.tech-images {
+    width: 100%;
+    max-width: 125px;
+    filter: grayscale(0);
+}
+
+.tech-images:hover{
+    filter: grayscale(0);
+    transition: 0.8s;
+}
+
+@media (max-width: 769px) {
+    .container{
+        margin: 0px 50px;
+    }
+
+    .about-grid{
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+        align-items: center;
+        justify-content: center;
+        gap: 0px;
+        margin: 0;
+    }
+
+    .grid-tittle{
+        grid-column: 1 / span 4;
+        grid-row: 1 / 1;  
+    }
+
+    .grid-tech{
+        grid-column: 1 / span 4;
+        grid-row: 2 / 3;
+    }
+}
+
+@media (min-width: 1024px){
+    .container{
+        margin: 0px 30px;
+    }
+
+    .main{
+        height: 100vh;
+    }
+}
+
+@media (min-width: 1440px){
+    .container{
+        margin: 0px 220px;
+    }
+
+}
+
+@media (max-width: 525px){
+    .container{
+        margin: 0 1em;
+    }
+
+    .header{
+        border: none;
+        background: none;
+    }
+
+    .toggle-button{
+        display: flex;
+        z-index: 1000;
+    }
+
+    .navbar-links{
+        display: none;
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        background-color: #000000;
+        top: 0;
+        padding: auto auto;
+        z-index: 100;
+        align-items: center;
+    }
+
+    .nav{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .logo{
+        padding: 0px 10px;
+    }
+
+    .navbar-links ul{
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navbar-links li{
+        text-align: center;
+        padding: 20px 0px;
+        font-size: 1.8em;
+    }
+
+    .navbar-links.active{
+        display: flex;
+    }
+
+    .banner{
+        font-size: .85em;
+    }
+
+    .fernando-image{
+        width: 190px;
+    }   
 }
