--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -384,7 +384,7 @@ main{
 .tech-images {
     width: 100%;
     max-width: 90px;
-    filter: grayscale(0);
+    filter: grayscale(1);
 }
 
 .tech-images:hover{
@@ -398,7 +398,7 @@ main{
     }
 
     .about-grid{
-        grid-template-columns: auto;
+        grid-template-columns: auto 1fr;
         grid-template-rows: auto;
         align-items: center;
         justify-content: center;
@@ -413,7 +413,15 @@ main{
 
     .grid-tech{
         grid-column: 1 / span 4;
-        grid-row: 2 / 3;
+        grid-row: 2 / 2;
+        width: 100%;
+    }
+
+    .tech-images {
+        width: 39%;
+        max-width: 90px;
+        filter:grayscale(0);
+        
     }
 }
 
@@ -492,5 +500,105 @@ main{
 
     .fernando-image{
         width: 190px;
-    }   
+    }
+    
+    .tech-images {
+        width: 100%;
+        max-width: 100px;
+        filter: grayscale(0);
+    }
+}
+/*  Contact - grids  */
+/*
+.grid-style{
+    margin: 1em 0;
+    background-color: #2e2d2d;
+    padding: 2em;
+    border-radius: 1.1em;
+    text-align: left;
+    align-items: center;
+}
+
+.about-grid {
+    display: grid;
+    gap: 1em;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    letter-spacing: -.015em;
+    line-height: 1.3;
+}
+
+.grid-tittle {
+    grid-column: 1 / 55%;
+    grid-row: 1 / 2;
+}
+
+.grid-head{
+    padding: .80em 0 1em 0;
+    font-size: 2em;
+}
+
+.grid-description {
+    font-weight: 600;
+    font-size: 1.2em;
+    opacity: .75;
+    padding-bottom: 1em;
+}
+
+/* Grid, Tech 
+.grid-tech {
+    grid-column: 2 / 3;
+    background: linear-gradient(70deg, #90b2f3b4, #77c8eb);
+
+}
+
+.tech-icons{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1em;
+}
+
+.tech-images {
+    width: 100%;
+    max-width: 90px;
+    filter: grayscale(1);
+}
+
+.tech-images:hover{
+    filter: grayscale(0);
+    transition: 0.8s;
+}
+
+*/
+
+.contact-images{
+    width: 100%;
+    max-width: 200px;
+    margin-bottom: 1em;
+}
+
+.contact-icons{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-grid{
+    background-color: #00c3a3;
+}
+
+.contact-buttom{
+    padding: 5px 10px;
+    letter-spacing: -.025em;
+    font-size: .95em;
+    font-weight: 600;
+    border-radius: .60em;
+    color: #ffffff;
+}
+
+.contact-buttom:hover{
+    background-color: palevioletred;
 }
