--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -104,7 +104,7 @@ a{
     right: 1rem;
     display: none;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     width: 30px;
     height: 21px;
     cursor: pointer;
@@ -508,70 +508,12 @@ main{
         filter: grayscale(0);
     }
 }
+
+/* Projects, Page */
+
+
+
 /*  Contact - grids  */
-/*
-.grid-style{
-    margin: 1em 0;
-    background-color: #2e2d2d;
-    padding: 2em;
-    border-radius: 1.1em;
-    text-align: left;
-    align-items: center;
-}
-
-.about-grid {
-    display: grid;
-    gap: 1em;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    letter-spacing: -.015em;
-    line-height: 1.3;
-}
-
-.grid-tittle {
-    grid-column: 1 / 55%;
-    grid-row: 1 / 2;
-}
-
-.grid-head{
-    padding: .80em 0 1em 0;
-    font-size: 2em;
-}
-
-.grid-description {
-    font-weight: 600;
-    font-size: 1.2em;
-    opacity: .75;
-    padding-bottom: 1em;
-}
-
-/* Grid, Tech 
-.grid-tech {
-    grid-column: 2 / 3;
-    background: linear-gradient(70deg, #90b2f3b4, #77c8eb);
-
-}
-
-.tech-icons{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 1em;
-}
-
-.tech-images {
-    width: 100%;
-    max-width: 90px;
-    filter: grayscale(1);
-}
-
-.tech-images:hover{
-    filter: grayscale(0);
-    transition: 0.8s;
-}
-
-*/
 
 .contact-images{
     width: 100%;
