--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -519,35 +519,24 @@ main{
 /* Request, Swipper */
 
 .container-request {
-    padding: 2.5em;
-    background-color: #1d1c1c;
+    height: 100vh;
+    width: 100vw;
+    background-color: #2e2d2d;
 }
 
 .swiper {
-    width: 100%;
-    height: 80vh;
+    width: 95vw;
+    height: 95vh;
+    border-radius: 1.2em;
 }
 
 .swiper-slide {
     text-align: center;
-    background: #000000;
-    border-radius: 1.1em;
+    background: black;
+    border-radius: 1.2em;
     color: #ffffff;
-    margin: 1px;
-
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
+    margin: 2em auto;
+    padding: 1em;
 }
 
 /* Request Cancel */
@@ -557,13 +546,15 @@ main{
     justify-content: space-between;
     letter-spacing: -.015em;
     line-height: 1.3;
-    font-size: 1em;
+    font-size: 1.2em;
+    border-bottom: 1px solid #75757577;
 }
 
 .swiper-button-p {
     cursor: pointer;
     padding: 5px 10px;
     font-weight: 600;
+    margin-bottom: 1em;
 }
 
 .back-first {
@@ -576,9 +567,28 @@ main{
     cursor: pointer;
     padding: 5px 10px;
     font-weight: 600;
+    margin-bottom: 1em;
 }
 
 /* Request, Title */
+.content {
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+form{
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    color: #fff;
+    padding: 2em 0;
+}
+
 .request-text {
     letter-spacing: -.015em;
     line-height: 1.3;
@@ -595,9 +605,8 @@ main{
 }
 
 /* Request , Form */
-.form-content {
+.form-content, textarea {
     display: flex;
-    justify-content: center;
     justify-content: space-between;
     align-items: center;
     background: #1d1c1c;
@@ -606,25 +615,51 @@ main{
     border-radius: 1.1em;
     border: solid #757575 1px;
     cursor: pointer;
+    color: #fff;
+    font-weight: 500;
+    font-size: .80em;
+    font-family: 'Inter', sans-serif;
 }
 
 label {
-    font-size: 1em;
+    font-size: 1.5em;
     cursor: pointer;
     width: 100%;
+
     text-align: left;
 }
 
 /* Request, next */
 .next-button {
-    margin: 10em 0 2em 0;
+    display: flex;
+    justify-content: center;
+    align-content: flex-end;
+    padding: 2em;
+    border-top: 1px solid #75757577;
+    position: absolute;
+    width: 100%;
+    bottom: 2em;
+    left: 0;
 }
 
 .swiper-button-n {
-    padding: 10px 15px;
+    padding: 15px 50px;
     background-color: #397cfa;
-    border-radius: .60em;
+    border-radius: 10px;
     cursor: pointer;
+    font-size: 1em;
+}
+
+.timeline{
+    text-align: left;
+    padding: 0px 1em;
+    font-weight: 500;
+    font-size: 1em;
+}
+
+.timeline-optional{
+    font-size: .80em;
+    opacity: .70;
 }
 
 @media (max-width: 769px) {
